<resources>
	<string name="app_name">VrDoctor</string>

	<string name="next">下一步</string>
	<string name="save">保存</string>
	<string name="commit">提交</string>

	<!-- 个人中心 -->
	<string name="login_register">立即注册</string>
	<string name="login_forget_pwd">忘记密码？</string>
	<string name="login_login">登&#160;&#160;录</string>
	<string name="login_other_login">其他登陆方式</string>
	<string name="register_phone_number_hint">请输入手机号</string>
	<string name="register_get_sms">获取验证码</string>
	<string name="register_sms_hint">请输入验证码</string>
	<string name="register_password_hint">请输入您的密码</string>
	<string name="register_confirm_password_hint">请再次输入您的密码</string>
	<string name="register_register">注&#160;&#160;册</string>
	<string name="register_user_protocol_hint">点击注册表示同意</string>
	<string name="register_user_protocol">用户协议</string>


	<!-- hint -->
	<string name="hint_login_user_phone">请输入您的手机号</string>
	<string name="hint_login_user_pwd">请输入您的密码</string>
	<string name="doctor_verify_pic_upload">请上传医师资格证或心理咨询师证</string>
	<string name="doctor_verify_pic1_upload">职称资格证图片上传</string>
	<string name="doctor_verify_upload_tip">如果您有职称资格证，请上传职称资格证</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="mine_my_ask">我的问诊</string>
	<string name="mine_my_collection">我的收藏</string>
	<string name="mine_ask_setting">问诊设置</string>
	<string name="mine_setting">设置</string>
	<string name="verify_reupload">重新审核</string>
	<string name="setting_clear_cache">清除缓存</string>
	<string name="setting_about">关于</string>
	<string name="setting_logout">退出登录</string>
	<string name="user_info_complete_change_head_img">点击切换头像</string>
	<string name="user_info_complete_my_sign">我的签名</string>
	<string name="user_info_complete_my_description">我的介绍</string>
	<string name="user_info_complete_less_than_30">不超过30个字</string>
	<string name="user_info_complete_less_than_300">不超过300个字</string>
	<string name="user_info_complete_my_job">我的擅长</string>

</resources>
