<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<include layout="@layout/activity_base_title_bar"/>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/super_plus_space"
				android:src="@drawable/icon_logo_big"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/middle_space">

				<include layout="@layout/line_break_blue"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/register_username_et"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@android:color/transparent"
						android:hint="@string/register_phone_number_hint"
						android:inputType="phone"
						android:maxLength="11"
						android:padding="@dimen/large_space"/>

					<Button
						android:id="@+id/register_send_sms_bt"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:background="@android:color/transparent"
						android:text="@string/register_get_sms"
						android:textColor="@color/colorPrimary"/>

				</RelativeLayout>

				<include layout="@layout/line_break_blue"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/middle_space"/>

				<include layout="@layout/line_break_blue"/>

				<EditText
					android:id="@+id/register_sms_et"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@android:color/transparent"
					android:hint="@string/register_sms_hint"
					android:inputType="numberSigned"
					android:maxLength="6"
					android:padding="@dimen/large_space"/>

				<include layout="@layout/line_break_blue"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/middle_space"/>

				<include layout="@layout/line_break_blue"/>

				<EditText
					android:id="@+id/register_pwd_et"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@android:color/transparent"
					android:hint="@string/register_password_hint"
					android:inputType="text"
					android:padding="@dimen/large_space"/>

				<include layout="@layout/line_break_blue"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/middle_space"/>

				<include layout="@layout/line_break_blue"/>

				<EditText
					android:id="@+id/register_confirm_pwd_et"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@android:color/transparent"
					android:hint="@string/register_confirm_password_hint"
					android:inputType="textPassword"
					android:padding="@dimen/large_space"/>

				<include layout="@layout/line_break_blue"/>

				<Button
					android:id="@+id/register_submit_bt"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/large_space"
					android:background="@drawable/shape_blue_bg_5r"
					android:text="@string/register_register"
					android:textColor="@color/white"
					android:textSize="@dimen/middle_text_size"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingLeft="@dimen/middle_space">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/register_user_protocol_hint"/>

					<TextView
						android:id="@+id/register_user_protocol_tv"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/register_user_protocol"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
